Netty thay cho Kryonet, java21, ....